[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/Clock/Clock.gd" type="Script" id=1]
[ext_resource path="res://img/eclockicons.png" type="Texture" id=2]
[ext_resource path="res://img/eclockhandicons.png" type="Texture" id=3]
[ext_resource path="res://img/black-pixel.png" type="Texture" id=4]
[ext_resource path="res://sounds/dingdong.wav" type="AudioStream" id=5]

[node name="Clock" type="Node2D"]
script = ExtResource( 1 )

[node name="ClockFace" type="Sprite" parent="."]
position = Vector2( 2368.8, 176.418 )
scale = Vector2( 1.48498, 1.48498 )
texture = ExtResource( 2 )

[node name="ClockHand" type="Sprite" parent="ClockFace"]
texture = ExtResource( 3 )

[node name="ScreenWipe" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 9999, 9999 )
texture = ExtResource( 4 )

[node name="DingDong" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
